Genetic programming implementation now works

--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/jgap.jar"/>
+	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/log4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
