Now prints out what it is doing when reading a file

--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/jgap.jar"/>
-	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/John/VIC/COMP307/Assignment 2/Symbolic Regression/libs/log4j.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ja1487/Apps/COMP307_A2/libs/jgap.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ja1487/Apps/COMP307_A2/libs/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ja1487/Apps/COMP307_A2/libs/log4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
